--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 .App {
+  display: flex;
+  justify-content: center;
   background-image: url('./assets/bg_side.svg');
   background-size: 100%;
   background-repeat: repeat-y;
