--- a/src/components/hero/styles/Hero.css
+++ b/src/components/hero/styles/Hero.css
@@ -1,17 +1,29 @@
 .hero-container {
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   color: white;
   height: 90vh;
+  width: 90%;
   margin-top: 5%;
 }
 
+
+
 .hero-info {
   display: flex;
+  background-image: url('../../../assets/bg_info.png');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
   flex-direction: column;
   width: 50%;
-  padding: 5%;
+
+  padding: 10%;
+}
+
+.heroinfo-container {
+  width: 100%;
 }
 
 .hero-info h2 {
@@ -32,8 +44,8 @@
 
 .hero-image-developer {
 
-  width: 50%;
-  height: 50%;
+  width: 60%;
+  height: 60%;
 
 }
 
@@ -49,11 +61,30 @@
 }
 
 @media screen and (max-width: 767px) {
-  .hero-pic {
+
+  /*  .hero-pic {
     display: none;
+  } */
+  .hero-container {
+    flex-direction: column;
+    height: 100vh;
+  }
+
+  .hero-image-developer {
+
+    width: 90%;
+    height: 90%;
+
+  }
+
+  .hero-pic {
+    width: 100%;
+    height: 100%;
+    margin-top: 100%;
   }
 
   .hero-info {
     width: 100%;
+    height: 100%;
   }
 }
