--- a/src/components/navbar/styles/NavBar.css
+++ b/src/components/navbar/styles/NavBar.css
@@ -140,13 +140,15 @@
     justify-content: center;
     height: 250px;
     background-color: #00C824;
+    border-radius: 0 0 10px 10px;
+    box-shadow: 0px 5px 3px #082E00;
   }
 
   .navbar-collapse-owner ul li {
     list-style: none;
     margin-top: 10px;
     border-bottom: 1px solid #082e00a6;
-    width: 100%;
+    width: 75%;
     text-align: center;
   }
 
