--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,18 @@
 .App {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
   background-image: url('./assets/bg_side.svg');
   background-size: 100%;
   background-repeat: repeat-y;
-  width: 100vw;
+  width: 100%;
   margin: 0;
   padding: 0;
+}
+
+.section-title {
+  color: #082E00;
+  text-align: center;
+  font-weight: bold;
 }
