--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,10 @@ body {
   margin: 0;
   padding: 0;
   width: 100vw;
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
+#root {
+  max-width: 100%;
 }
