--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,23 @@
 
 .section-title {
   color: #082E00;
+  font-size: 2.5rem;
   text-align: center;
   font-weight: bold;
+  text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.507);
+}
+
+.divider {
+  background-image: url('./assets/divider.png');
+  width: 100vw;
+  height: 15vw;
+  max-height: 300px;
+  min-height: 60px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+::-webkit-scrollbar {
+  color: transparent;
 }
