--- a/src/components/hero/styles/Hero.css
+++ b/src/components/hero/styles/Hero.css
@@ -1,12 +1,11 @@
 .hero-container {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   color: white;
-  height: 90vh;
   width: 90%;
-  margin-top: 5%;
+  margin-top: 10vw;
+  margin-bottom: 10svw;
 }
 
 
@@ -18,7 +17,6 @@
   background-size: 100% 100%;
   flex-direction: column;
   width: 50%;
-
   padding: 10%;
 }
 
@@ -39,13 +37,13 @@
 .hero-pic {
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 50%;
 }
 
 .hero-image-developer {
 
   width: 60%;
-  height: 60%;
 
 }
 
@@ -102,9 +100,7 @@
 
 @media screen and (max-width: 767px) {
 
-  /*  .hero-pic {
-    display: none;
-  } */
+
   .hero-container {
     flex-direction: column;
     height: 100vh;
@@ -113,14 +109,12 @@
   .hero-image-developer {
 
     width: 90%;
-    height: 90%;
 
   }
 
   .hero-pic {
-    width: 100%;
-    height: 100%;
-    margin-top: 100%;
+    width: 80%;
+    height: 80%;
   }
 
   .hero-info {
