--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@
 }
 
 .divider {
+  display: flex;
   background-image: url('./assets/divider.png');
   width: 100vw;
   height: 15vw;
@@ -28,8 +29,34 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  justify-content: center;
+  align-items: center;
+  font-size: 3rem;
+  font-weight: bolder;
+  color: white;
+  margin-top: 20px;
+  text-shadow: 0 0px 10px black;
 }
 
+/* width */
 ::-webkit-scrollbar {
-  color: transparent;
+  width: 10px;
+  height: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f16c;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #00000065;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
