--- a/src/components/contactMe/styles/ContactMe.css
+++ b/src/components/contactMe/styles/ContactMe.css
@@ -1,20 +1,3 @@
-.contact .container {
-  max-width: 1100px;
-  min-height: 200px;
-  padding: 20px;
-}
-
-.contact .rainbow {
-  border-radius: 50px;
-}
-
-.contact .row {
-  width: 100%;
-  display: flex;
-  align-items: center;
-}
-
-
 .contact .section-description {
   color: white;
   font-size: 1.2rem;
@@ -37,6 +20,7 @@
   font-size: 1.3rem;
   animation: spin-bg-color 10s infinite linear;
   transition: all 0.2s ease-in-out;
+  margin: 0 5px;
 }
 
 .contact button:hover {
@@ -48,4 +32,38 @@
   color: white;
   animation: none;
   transition: all 0.2s ease-in-out;
+}
+
+.contact-background {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-image: url('../../../assets/bg_info.png');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  flex-direction: column;
+  width: 500px;
+  padding: 10%;
+  height: 400px;
+  margin-top: 20px;
+}
+
+@media screen and (max-width: 767px) {
+  .contact-background {
+    width: 80vw;
+    height: 300px;
+  }
+
+  .contact-background * {
+    font-size: 25px;
+  }
+
+  .contact button i {
+    font-size: medium;
+  }
+
+  .contact button {
+    font-size: small;
+  }
 }
